--- a/reackt_app/package.json
+++ b/reackt_app/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "custom-build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
